--- a/WindowsFormsApp1/Capa_Info/Capa_Info.csproj
+++ b/WindowsFormsApp1/Capa_Info/Capa_Info.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Npgsql">
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\PostgreSQL\Npgsql\bin\Npgsql.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Documents\Npgsql.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
