--- a/WindowsFormsApp1/WindowsFormsApp1/Interfaz.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1/Interfaz.csproj
@@ -37,6 +37,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -81,6 +82,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rep.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Rep.Designer.cs">
+      <DependentUpon>Rep.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vuelos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,6 +118,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Rep.resx">
+      <DependentUpon>Rep.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vuelos.resx">
       <DependentUpon>Vuelos.cs</DependentUpon>
     </EmbeddedResource>
