Vista preliminar creada, falta codigo en alojamiento, vuelos y preliminar.

--- a/WindowsFormsApp1/WindowsFormsApp1/Interfaz.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1/Interfaz.csproj
@@ -80,6 +80,12 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Preliminar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Preliminar.Designer.cs">
+      <DependentUpon>Preliminar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rep.cs">
@@ -108,6 +114,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Preliminar.resx">
+      <DependentUpon>Preliminar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
