--- a/WindowsFormsApp1/WindowsFormsApp1/Interfaz.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1/Interfaz.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Npgsql">
       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\PostgreSQL\Npgsql\bin\Npgsql.dll</HintPath>
     </Reference>
